--- a/Teams.html
+++ b/Teams.html
@@ -26,7 +26,7 @@
                     class="vuesaxlinearcategory-2-icon"
                     loading="lazy"
                     alt=""
-                    src="./public/vuesaxlinearcategory2.svg"
+                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\menu.png"
                   />
 
                   <b class="teams">Teams</b>
@@ -38,7 +38,7 @@
                     class="vuesaxlinearmessage-icon"
                     loading="lazy"
                     alt=""
-                    src="./public/vuesaxlinearmessage.svg"
+                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\message.png"
                   />
 
                   <b class="message">Message</b>
@@ -50,7 +50,7 @@
                     class="vuesaxlinearsetting-2-icon"
                     loading="lazy"
                     alt=""
-                    src="./public/vuesaxlinearsetting2.svg"
+                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\settings.png"
                   />
 
                   <b class="settings2">Settings</b>
@@ -69,7 +69,7 @@
               class="notif-icon"
               loading="lazy"
               alt=""
-              src="./public/notif.svg"
+              src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\notification-bell.png"
             />
 
             <div class="profile-icon">
@@ -82,7 +82,7 @@
                         <img
                           class="search-normal-icon"
                           alt=""
-                          src="./public/searchnormal.svg"
+                          src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\search.png"
                         />
 
                         <div class="search-placeholder">
@@ -93,7 +93,7 @@
                         <img
                           class="category-icon"
                           alt=""
-                          src="./public/category@2x.png"
+                          src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\plus.png"
                         />
 
                         <a class="new-team">New Team</a>
@@ -111,7 +111,7 @@
               class="notification-content-icon"
               loading="lazy"
               alt=""
-              src="./public/vector.svg"
+              src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\profile-user.png"
             />
           </div>
         </section>
@@ -128,7 +128,7 @@
                     class="image-icon"
                     loading="lazy"
                     alt=""
-                    src="./public/image@2x.png"
+                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\Pic2.jpg"
                   />
 
                   <div class="task-details">
@@ -142,7 +142,7 @@
                           class="vuesaxlinearbook-icon"
                           loading="lazy"
                           alt=""
-                          src="./public/vuesaxlinearbook-1.svg"
+                          src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\open-book.png"
                         />
                       </div>
                       <div class="tasks">5 Tasks</div>
@@ -158,5 +158,14 @@
         </div>
       </section>
     </div>
+    <script>
+      var newTeamButton = document.querySelector(".category");
+
+      if (newTeamButton) {
+        newTeamButton.addEventListener("click", function () {
+          window.location.href = "CreateTeam.html"; // Ganti dengan URL halaman CreateTeam.html Anda
+        });
+      }
+    </script>
   </body>
 </html>
