--- a/CreateTeam.html
+++ b/CreateTeam.html
@@ -20,7 +20,7 @@
               <b class="ark">ARK</b>
             </div>
             <div class="side-menu1">
-              <div class="overview">
+              <button id="overviewButton" class="overview">
                 <div class="overview1">
                   <img
                     class="vuesaxlinearcategory-2-icon"
@@ -28,10 +28,9 @@
                     alt=""
                     src="Foto\menu.png"
                   />
-
                   <b class="teams">Teams</b>
                 </div>
-              </div>
+              </button>
               <button class="mentors">
                 <div class="mentors1">
                   <img
@@ -73,14 +72,14 @@
                 class="notif-icon"
                 loading="lazy"
                 alt=""
-                src="./public/notif.svg"
+                src="Foto\notification-bell.png"
               />
 
               <img
                 class="vector-icon"
                 loading="lazy"
                 alt=""
-                src="./public/vector.svg"
+                src="Foto\profile-user.png"
               />
             </div>
           </div>
@@ -103,7 +102,7 @@
               <div class="frame-div">
                 <div class="title-group">
                   <b class="title2">Team name</b>
-                  <input class="frame-child" type="text" />
+                  <input class="frame-child" type="text" id="teamNameInput" />
                 </div>
                 <div class="title-container">
                   <b class="title3">Team description</b>
@@ -124,8 +123,56 @@
     </div>
 
     <script>
+      var newTeamButton = document.querySelector(".category");
+
+      if (newTeamButton) {
+        newTeamButton.addEventListener("click", function () {
+          window.location.href = "CreateTeam.html";
+        });
+      }
+
+      var overviewButton = document.getElementById("overviewButton");
+      var isButtonsAdded = false;
+      var newButton1;
+      var newButton2;
+
+      if (overviewButton) {
+        overviewButton.addEventListener("click", function () {
+          if (!isButtonsAdded) {
+            newButton1 = document.createElement("button");
+            newButton1.className = "course";
+            newButton1.innerHTML = `
+              <img class="vuesaxlinearbook-icon" loading="lazy" alt="" src="Foto/open-book.png" />
+              <b class="all-task">All Task</b>
+              `;
+
+            newButton2 = document.createElement("button");
+            newButton2.className = "course1";
+            newButton2.id = "course";
+            newButton2.innerHTML = `
+                <img class="task-icon" loading="lazy" alt="" src="Foto/list.png" />
+                <b class="my-task">My Task</b>
+              `;
+
+            var parentElement = overviewButton.parentElement;
+
+            parentElement.insertBefore(newButton1, overviewButton.nextSibling);
+
+            parentElement.insertBefore(newButton2, newButton1.nextSibling);
+
+            isButtonsAdded = true;
+          } else {
+            newButton1.remove();
+            newButton2.remove();
+
+            isButtonsAdded = false;
+          }
+        });
+      }
       var backButton = document.querySelector(".title1");
       var arrowIcon = document.querySelector(".vuesaxlineararrow-right-icon");
+      var teamNameInput = document.getElementById("teamNameInput");
+      var groupButton = document.getElementById("groupButton");
 
       if (backButton) {
         backButton.addEventListener("click", function () {
@@ -139,12 +186,19 @@
         });
       }
 
-      var groupButton = document.getElementById("groupButton");
-      if (groupButton) {
-        groupButton.addEventListener("click", function (e) {
-          // Please sync "Admin - Task" to the project
-        });
+      function updateCreateTeamButton() {
+        var teamName = teamNameInput.value.trim();
+
+        // Menampilkan notifikasi alert jika input team name kosong
+        if (teamName === "") {
+          alert("Team name cannot be empty!");
+        }
+
+        // Menonaktifkan tombol jika input kosong
+        groupButton.disabled = teamName === "";
       }
+
+      groupButton.addEventListener("click", updateCreateTeamButton);
     </script>
   </body>
 </html>
