--- a/Teams.html
+++ b/Teams.html
@@ -20,42 +20,39 @@
               <b class="ark">ARK</b>
             </div>
             <nav class="side-menu1">
-              <div class="overview">
+              <button id="overviewButton" class="overview">
                 <div class="overview1">
                   <img
                     class="vuesaxlinearcategory-2-icon"
                     loading="lazy"
                     alt=""
-                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\menu.png"
+                    src="Foto\menu.png"
                   />
-
                   <b class="teams">Teams</b>
                 </div>
-              </div>
-              <div class="mentors">
+              </button>
+              <button class="mentors">
                 <div class="mentors1">
                   <img
                     class="vuesaxlinearmessage-icon"
                     loading="lazy"
                     alt=""
-                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\message.png"
+                    src="Foto/message.png"
                   />
-
                   <b class="message">Message</b>
                 </div>
-              </div>
-              <div class="settings">
+              </button>
+              <button class="settings">
                 <div class="settings1">
                   <img
                     class="vuesaxlinearsetting-2-icon"
                     loading="lazy"
                     alt=""
-                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\settings.png"
+                    src="Foto\settings.png"
                   />
-
                   <b class="settings2">Settings</b>
                 </div>
-              </div>
+              </button>
             </nav>
           </div>
         </div>
@@ -71,7 +68,6 @@
               alt=""
               src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\notification-bell.png"
             />
-
             <div class="profile-icon">
               <div class="profile-image">
                 <b class="teams1">Teams</b>
@@ -84,10 +80,12 @@
                           alt=""
                           src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\search.png"
                         />
-
-                        <div class="search-placeholder">
-                          <a class="search-course">Join Team</a>
-                        </div>
+                        <input
+                          type="text"
+                          class="search-input"
+                          placeholder="Search..."
+                          aria-label="Search"
+                        />
                       </div>
                       <button class="category">
                         <img
@@ -95,7 +93,6 @@
                           alt=""
                           src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\plus.png"
                         />
-
                         <a class="new-team">New Team</a>
                       </button>
                     </div>
@@ -130,7 +127,6 @@
                     alt=""
                     src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\Pic2.jpg"
                   />
-
                   <div class="task-details">
                     <b class="title1">ARK Team</b>
                     <div class="your-job-as">Task Management App</div>
@@ -156,16 +152,53 @@
             </div>
           </div>
         </div>
-      </section>
-    </div>
     <script>
       var newTeamButton = document.querySelector(".category");
 
       if (newTeamButton) {
         newTeamButton.addEventListener("click", function () {
-          window.location.href = "CreateTeam.html"; // Ganti dengan URL halaman CreateTeam.html Anda
+          window.location.href = "CreateTeam.html";
         });
       }
-    </script>
-  </body>
-</html>
+
+      var overviewButton = document.getElementById("overviewButton");
+      var isButtonsAdded = false; 
+      var newButton1;
+      var newButton2;
+
+      if (overviewButton) {
+        overviewButton.addEventListener("click", function () {
+          if (!isButtonsAdded) {
+            newButton1 = document.createElement("button");
+            newButton1.className = "course";
+            newButton1.innerHTML = `
+              <img class="vuesaxlinearbook-icon" loading="lazy" alt="" src="Foto/open-book.png" />
+              <b class="all-task">All Task</b>
+              `;
+  
+              newButton2 = document.createElement("button");
+              newButton2.className = "course1";
+              newButton2.id = "course";
+              newButton2.innerHTML = `
+                <img class="task-icon" loading="lazy" alt="" src="Foto/list.png" />
+                <b class="my-task">My Task</b>
+              `;
+  
+              var parentElement = overviewButton.parentElement;
+  
+              parentElement.insertBefore(newButton1, overviewButton.nextSibling);
+  
+              parentElement.insertBefore(newButton2, newButton1.nextSibling);
+  
+              isButtonsAdded = true;
+            } else {
+              newButton1.remove();
+              newButton2.remove();
+  
+              isButtonsAdded = false; 
+            }
+          });
+        }
+      </script>
+    </body>
+  </html>
